introduce more convenient getList/setList
GitOrigin-RevId: 84d44e2053b422fc8791ffe445865e4b4f48e2c3

(cherry picked from commit 1bcde75123b24a83f269ea4bd6de1b1030888064)
Change-Id: Idfb222a34a4a1d01df87fc7886787ef4f490d3f7